Refactor methods and add comments